--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um bot que irá deixar a sua comunidade segura de um jeito fácil">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Balle bot - Modere sua comunidade do discord</title>
 </head>
-<body>
+<center><body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="logo.svg" alt="logo da comunidade ballerini">
 
@@ -42,5 +43,5 @@
     <footer>
         <img src="BALLERINI.svg">
     </footer>
-</body>
+</body></center>
 </html
