--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um bot que irá deixar a sua comunidade segura de um jeito fácil">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="sytle.css" >
     <title>Balle bot - Modere sua comunidade do discord</title>
 </head>
-<center><body>
+<body>
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="logo.svg" alt="logo da comunidade ballerini">
 
@@ -40,8 +40,8 @@
         </section>
     </main>
 
-    <footer>
-        <img src="BALLERINI.svg">
+    <footer class="rodape">
+        <img class="rodape-imagem" src="BALLERINI.svg">
     </footer>
-</body></center>
+</body>
 </html
